fixed mobile white space

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,9 @@
  * Copyright 2015 Script Eden
  * Licensed under MIT
 */
-
+html {
+	overflow-x: hidden;
+}
 body {
 	font: 300 14px/1.8 'Raleway', sans-serif;
 	color: #666;
